# Financial-RAG

./: .env.example  README.md  pyproject.toml
.zen/: config.yaml
config/: retry_policy.py  settings.py
domain/base/: __init__.py  eval_document.py  hf_doc.py  nosql.py  page_document.py  vector.py
llm_project/: generation.py  graph_engine.py  langchain_ux.py  retrieval.py
pipelines/: digital_data_etl.py  evaluate.py  feature_engineering_pipeline.py
run/: run_etl.py  run_eval.py  run_fe.py
steps/digital_data_etl/: __init__.py  get_or_create_document.py  read_data.py
steps/evaluate/: evaluate_answer.py  generate_answers.py  get_testset_data.py  store_evaluation.py
steps/feature_engineering_pipeline/: chunk_and_embed.py  create_bm25_index.py
