[tool.poetry]
name = "llm-project"
version = "0.1.0"
description = "Personal Project"
authors = ["bencha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
ipykernel = "6.30.1"
zenml = { version = "0.92.0", extras = ["server"] }
pymongo = "^4.6.2"
markdown2 = "^2.0"
click = "^8.0.1"
loguru = "^0.7.2"
numpy = "^1.26.4"
poethepoet = "0.29.0"
duckdb="^1.4"
datasets = "^3.0.1"


# Digital data ETL
selenium = "^4.21.0"
beautifulsoup4 = "^4.12.3"


# Feature engineering
qdrant-client = "^1.8.0"
langchain = "^1.0.0"
langgraph = "^1.0.5"
langchain_google_genai = "^4.0.0"
sentence-transformers = "^3.0.0"

# RAG
google-genai = "^1.46.0"
gradio = "^5.5.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# Format: executable_name = "package.module:function"
ui = "llm_project.langchain_ux:main"
etl = "run.run_etl:main"
fe = "run.run_fe:main"
eval = "run.run_eval:main"
